Landing Page created, layout problem solved

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Ajustes globales para el body */
+body {
+    @apply w-full min-h-screen bg-gray-50;
+  }
+
+  #root {
+    @apply w-full h-full;
+  }
